--- a/src/components/DashboardContainer/DashboardContainer.scss
+++ b/src/components/DashboardContainer/DashboardContainer.scss
@@ -11,7 +11,7 @@
 }
 
 .DashCnt-bar3-cnt{
-    width: 25px;
+    width: 2%;
     margin-left: 2%;
     margin-top: 0.5%;
     cursor: pointer;
@@ -52,6 +52,7 @@
     &:focus-within{
         background-color: white;
         box-shadow: 3px 3px 6px 2px rgba(255, 255, 255, 0.5);
+        outline: 0px;
     }
 }
 
@@ -83,8 +84,75 @@
     }    
 }
 
-#dashCnt-bulbItem-cnt{
+#dashCnt-notes-cnt{
     background-color: rgb(254, 222, 182);
     border-top-right-radius: 25%;
     border-bottom-right-radius: 25%;
+}
+
+
+#dashbd-bulb-ct{
+    height: 20px;
+    width: 20px;
+    border: 4px solid transparent;
+    &:hover{
+        border-radius: 50%;
+        background-color: orange;
+    }
+}
+
+.dashbd-nav-cnt{
+    display: flex;
+    flex-direction: column;
+    width: 7.5%;
+    align-items: center;
+    gap: 25px;
+    // margin-top: 1.5%;
+    padding-top: 20px;
+    position: relative;
+    // padding-right: 10%;
+    height: 100vh;
+    // margin-left: 2.5%;
+}
+
+.dashbd-nts-ct{
+    border: 8px solid transparent;
+    border-radius: 50%;
+    opacity: 0.7;
+    &:hover{
+
+        background-color: gray;
+    }
+}
+
+
+.dashbd-outlet-cnt{
+    margin-left: 100px;
+}
+
+.dashbd-subNotes-ct{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+#dashbd-bulbnav-cnt{
+    &:hover{
+        background-color: rgb(243, 175, 66);
+    }
+}
+
+
+@media (min-width:350px) and (max-width:600px){
+ .DashCnt-bar3-cnt{
+    margin-left: 0px;
+ }   
+
+ .dashCnt-headerlabel-cnt{
+    font-size: 15px;
+ }
+
+ .DashCnt-keepIcon-cnt{
+    width: 6%;
+ }
 }
