--- a/src/components/Notecard/Notecard.scss
+++ b/src/components/Notecard/Notecard.scss
@@ -26,7 +26,6 @@
     position: absolute; 
     top: -8px; 
     left: -7px; 
-    // z-index: 1; 
     transition: opacity 0.3s ease; 
 }
 
@@ -99,6 +98,12 @@
 
 .noteCard-description-cnt{
     text-wrap: wrap;
+}
+
+.noteCard-edit-cnt{
+    margin-top: 10%;
+    margin-left: 10%;
+    
 }
 
 
