--- a/src/components/Notecard/Notecard.scss
+++ b/src/components/Notecard/Notecard.scss
@@ -106,6 +106,36 @@
     
 }
 
+.notecard-trashOp-ct{
+    height: 20px;
+    width: 20px;
+    border: 5px solid transparent;
+    &:hover{
+        cursor: pointer;
+        background-color: rgb(210, 206, 206);
+        border-radius: 50%;
+    }
+}
+
+.noteUI-trashActions-cnt{
+    opacity: 0;
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: -3%;
+    gap: 40%;
+    &:hover{
+        opacity: 1;
+    }
+}
+
+.noteCard-trashwrapper-cnt{
+    padding: 12px 16px;
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    border: 0.01px solid rgb(233, 230, 230);
+    border-radius: 20px;
+}
 
 @media (min-width:300px) and (max-width:650px){
     .size-6{
@@ -117,3 +147,4 @@
         max-width: 90%;
     }
 }
+
